--- a/stylesheet.css
+++ b/stylesheet.css
@@ -3,6 +3,7 @@
     --main-bg2-color: #3a3535;
     --main-accent-color: #ff7315;
     --main-textbg-color: #f4f4f4;
+    --main-font: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   }
 
 header{
@@ -56,14 +57,86 @@ header{
     padding: 15px
   }
   nav{
-    text-align: center;
+
+    font-family: var(--main-font);
   }
   h1{
     text-align: center;
+    font-family: var(--main-font);
   }
   h2{
     text-align: center;
+    font-family: var(--main-font);
+    font-size: large;
   }
   p{
-      text-align: center;
+      text-align: justify;
+      font-family: var(--main-font);
   }
+
+  aside{
+    float: left;
+    width: 200px;
+  }
+
+/* The sidebar menu */
+.sidebar {
+  height: 537px; /* 100% Full-height */
+  width: 0; /* 0 width - change this with JavaScript */
+  position: fixed; /* Stay in place */
+  z-index: 1; /* Stay on top */
+  top: 0;
+  left: 0px;
+  background-color: var(--main-bg2-color); /* Black*/
+  overflow-x: hidden; /* Disable horizontal scroll */
+  padding-top: 60px; /* Place content 60px from the top */
+  transition: 0s; /* 0.5 second transition effect to slide in the sidebar */
+  border-style: solid;
+  border-width: 0px;
+  border-color: var(--main-accent-color);
+  border-right-width: 15px;
+  margin-top: 15px;
+}
+/* The sidebar links */
+.sidebar a {
+  padding: 8px 8px 8px 32px;
+  text-decoration: none;
+  font-size: 25px;
+  font-style: bold;
+  color: var(--main-accent-color);
+  display: block;
+  transition: 0.3s;
+}
+
+/* Position and style the close button (top right corner) */
+.sidebar .closebtn {
+  position: absolute;
+  top: 0;
+  right: 25px;
+  font-size: 36px;
+  margin-left: 50px;
+}
+
+/* The button used to open the sidebar */
+.openbtn {
+  font-size: 30px;
+  cursor: pointer;
+  color: #111;
+  padding: 10px 15px;
+  border: none;
+  text-align: left;
+}
+
+.openbtn:hover {
+  background-color: var(--main-bg2-color);
+  color: var(--main-accent-color);
+}
+
+/* Style page content - use this if you want to push the page content to the right when you open the side navigation */
+
+
+/* On smaller screens, where height is less than 450px, change the style of the sidenav (less padding and a smaller font size) */
+@media screen and (max-height: 450px) {
+  .sidebar {padding-top: 15px;}
+  .sidebar a {font-size: 18px;}
+}
