--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -65,6 +65,16 @@
     box-shadow: 10px 10px 5px var(--main-bg2-color);
     margin-bottom: 1em;
   }
+  footer a{
+    text-decoration: none;
+    color: var(--main-bg-color);
+    font-size: 2.5em;
+    padding: 14px 16px;
+  }
+  footer a:hover{
+    color: var(--main-accent-color);
+    font-size: 2.5em;
+  }
 
   main p {
       text-align:justify;
