Added scroll to top smoothly buttons

--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -20,6 +20,9 @@
     text-align: center;
     font-family: var(--main-font);
   }
+  html{
+    scroll-behavior: smooth;
+  }
 
   header{
       text-align: left;
