--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -60,7 +60,7 @@
   .active {
     background-color: var(--main-accent2-color);
   }
-  main,footer,article{
+  main,footer,article,.blogNav{
     background-color: var(--main-textbg-color);
     width: 64em;
     margin:auto;
@@ -68,13 +68,13 @@
     box-shadow: 10px 10px 5px var(--main-bg2-color);
     margin-bottom: 1em;
   }
-  footer a{
+  .blogNav a{
     text-decoration: none;
     color: var(--main-bg-color);
     font-size: 2.5em;
     padding: 14px 16px;
   }
-  footer a:hover{
+  .blogNav a:hover{
     color: var(--main-accent-color);
     font-size: 2.5em;
   }
