--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -79,8 +79,8 @@
     font-size: 2.5em;
   }
 
-  main p {
-      text-align:center;
+  main p,article p{
+      text-align:justify;
   }
 
   h1,h2,h3{
