--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -7,10 +7,10 @@
     font-family: sintony;
     src: url(../fonts/Sintony-Regular.ttf)
 }
-
+/*736d62*/
 :root {
     --main-bg-color: #232020;
-    --main-bg2-color: #736d62;
+    --main-bg2-color: #000000A0;
     --main-accent-color: #90b8c4;
     --main-accent2-color: #7e94a9;
     --main-textbg-color: #f3f4f3;
@@ -27,11 +27,16 @@
   header{
       text-align: left;
   }
-  nav{
+  .navbar{
       margin-bottom: 1em;
+      position: sticky;
+      top: 0.5em;
+      
+      z-index: 999;
   }
 
-  ul {
+
+  .navbar ul {
     list-style-type: none;
     margin: 0;
     padding: 0;
@@ -40,11 +45,11 @@
     box-shadow: 10px 10px 5px var(--main-bg2-color);
   }
 
-  li {
+  .navbar li {
     float:left
   }
   
-  li a{
+  .navbar li a{
       display: block;
       color: var(--main-bg-color);
       text-align: center;
@@ -53,7 +58,7 @@
       
   }
 
-  li a:hover {
+  .navbar li a:hover {
     background-color: var(--main-accent-color);
   }
 
@@ -62,12 +67,19 @@
   }
   main,footer,article,.blogNav{
     background-color: var(--main-textbg-color);
-    width: 64em;
+    max-width: 60em;
+    width: device-width;
     margin:auto;
-    padding: 1em 3em;
+    
+    padding: 1em 5%;
     box-shadow: 10px 10px 5px var(--main-bg2-color);
     margin-bottom: 1em;
   }
+/*
+  main,article{
+    margin-top: 5em;
+  }
+  */
   .blogNav a{
     text-decoration: none;
     color: var(--main-bg-color);
@@ -97,10 +109,11 @@
   }
 
   .gridContainer{
+    
     display: grid;
-    grid-template-columns: auto auto auto;
-    align-items: center;
+    grid-template-columns: repeat(auto-fit, minmax(16em, auto));
     justify-items: center;
+    align-items: center;
     transition: linear;
     transform: rotateY(0deg); 
     transition: 0.5s;
@@ -108,20 +121,28 @@
 
   .card {
     /* Add shadows to create the "card" effect */
-    box-shadow: 5px 5px 5px  var(--main-bg2-color);
-    transition: 0.3s;
-    margin-bottom: 25px;
-    margin-top: 25px;
-    width: 275px;
-    height: 450px;
+    margin: 1em 1em;
     background-color: white;
     text-decoration: none;
     color: var(--main-bg-color);
+    height: 90%;
+    max-height: 30em;
+    box-shadow: 5px 5px 5px  var(--main-bg2-color);
+    transition: 0.3s;
+    /*
     
+    
+    width: auto;
+    height: 450px;
+    
+    
+    
+    */
   }
   .card img{
-    width:275px;
+    width:100%;
     height:275px;
+
     object-fit: cover;
   }
   
@@ -146,6 +167,10 @@
     color: var(--main-bg-color);
     box-shadow: 5px 5px 5px var(--main-bg2-color);
     transition:0.3s;
+    height: 75vh;
+    top: 4em;
+    position: sticky;
+    padding-bottom: 0.5em;
   }
   
   
@@ -157,4 +182,8 @@
   button:disabled{
     color:var(--main-bg2-color);
     box-shadow: 0px 0px 0px var(--main-bg2-color);
+  }
+
+  img{
+    max-width: 100%;
   }
