--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -156,15 +156,6 @@
     max-height: 30em;
     box-shadow: 5px 5px 5px  var(--main-bg2-color);
     transition: 0.3s;
-    /*
-    
-    
-    width: auto;
-    height: 450px;
-    
-    
-    
-    */
   }
   .card img{
     width:100%;
@@ -172,19 +163,16 @@
 
     object-fit: cover;
   }
-  
-  /* On mouse-over, add a deeper shadow */
   .card:hover {
     box-shadow:10px 10px 5px var(--main-bg2-color);
   }
-  
-  /* Add some padding inside the card container */
+
   .container {
     padding: 2px 16px;
   }
 
   button{
-    background-color: white; /* Green */
+    background-color: white;
     border: none;
     text-align: center;
     text-decoration: none;
@@ -213,4 +201,5 @@
 
   img{
     max-width: 100%;
+    max-height: 32em;
   }
